# fairy-python

./: Cargo.toml  Justfile  README.md  build.rs  example.py  fairy.pyi  pyproject.toml
.github/workflows/: CI.yml  before.sh
example/: .npmrc  package.json  pnpm-lock.yaml
src/: bindings.rs  fairy.udl  lib.rs
